[gd_scene load_steps=3 format=3 uid="uid://cs5bsf63pt2ir"]

[ext_resource type="Script" uid="uid://bnclybrdahi1h" path="res://algorithms/randomness/simplexnoise/SimplexNoise.gd" id="1_simplex"]
[ext_resource type="Script" uid="uid://bw2rm3o7e8vne" path="res://algorithms/randomness/simplexnoise/SimplexVisualizer.gd" id="2_simplex_visual"]

[node name="SimplexNoise" type="Node3D"]
script = ExtResource("1_simplex")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="NoiseField" type="Node3D" parent="."]
script = ExtResource("2_simplex_visual")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_vertical = 0

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Simplex Noise Visualization
- Improved noise algorithm
- Better performance than Perlin
- Reduced directional artifacts
- Smooth interpolation"
horizontal_alignment = 1

[node name="FrequencySlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.1

[node name="FrequencyLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Frequency: 1.0"

[node name="AmplitudeSlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.1

[node name="AmplitudeLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Amplitude: 1.0"

[node name="PersistenceSlider" type="HSlider" parent="UI/VBoxContainer"]
layout_mode = 2
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.1

[node name="PersistenceLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Persistence: 0.5"

[node name="RegenerateButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Regenerate Noise"

[node name="CompareButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Compare with Perlin"
